namespace broke my sh

--- a/MovieCardsAPI/appsettings.json
+++ b/MovieCardsAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieCardsAPIContext": "Server=(localdb)\\mssqllocaldb;Database=MovieCardsAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
